Opened 11 years ago

Closed 11 years ago

#10907 closed bug (fixed)

[WebPositive] shows Download aborted notification on deletion

Reported by: diver Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev47323

It looks like WebPositive keeps monitoring files that has been downloaded. This results in "Download aborted" Notification once you move downloaded file to Trash. And while I'm at it, the red notification stripe looks rather bad to me.

Change History (1)

comment:1 by pulkomandy, 11 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev47382.

Note: See TracTickets for help on using tickets.